k8s/manifests/drawio-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
---
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio
  labels:
    app: draw.io
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 8080
  selector:
    app: draw.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
  namespace: drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: draw.io
  template:
    metadata:
      labels:
        app: draw.io
    spec:
      containers:
      - image: docker.io/jgraph/drawio:alpine
        imagePullPolicy: IfNotPresent
        name: drawio
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawio
  namespace: drawio
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: drawio.local.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drawio
            port:
              number: 8080
...
