k8s/manifests/minio.yaml
---
# https://github.com/kubernetes/examples/tree/master/staging/storage/minio
#  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: circuit-calculator
  labels:
    app: minio
spec:
  serviceName: minio
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2022-03-22T02-05-10Z
          args:
            - server
            - /data
            - --console-address
            - :9001
#            - http://minio-0.minio.default.svc.cluster.local/data
#            - http://minio-1.minio.default.svc.cluster.local/data
#            - http://minio-2.minio.default.svc.cluster.local/data
#            - http://minio-3.minio.default.svc.cluster.local/data
          ports:
            - containerPort: 9000
              hostPort: 9000
            - containerPort: 9001
              hostPort: 9001
          # These volume mounts are persistent. Each pod in the Statefulset
          # gets a volume mounted based on this field.
          volumeMounts:
            - name: data
              mountPath: /data
  # These are converted to volume claims by the controller
  # and mounted at the paths mentioned above.
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: circuit-calculator
spec:
  selector:
    app: minio
  ports:
    - name: minio
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: miniocon
      port: 9001
      protocol: TCP
      targetPort: 9001
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: circuit-calculator
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: minio.local.durdom
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
    - host: minio-console.local.durdom
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
